--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
   </nav>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="#">IMPORTANE</a>
+      <a class="navbar-brand" href="#"><img src="assets/logo2.png"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -45,8 +45,39 @@
     <router-outlet></router-outlet>
 
 <div class="footer" style="background-color: #F5F5F5">
-    Legal notice & Data privacy
-    Sitemap
-    Terms & conditions
-    
+  <div class="container" style="text-align: center;">
+      
+      <div class="row">
+
+          <div class="col-sm">
+
+            <br>
+            <br>
+              <img src="assets/logo2.png">
+
+          </div>
+
+          <div class="col-sm">
+
+            
+            <img src="assets/lokacija.png"> office@importane.rs
+            <br>
+            <br>
+            <img src="assets/iconfinder_phone_1055012.png"> office@importane.rs
+            <br>
+            <br>
+            <img src="assets/iconfinder_mail_287559.png"> office@importane.rs
+
+          </div>
+
+          <div class="col-sm">
+            <br>
+            <h3>Nesto o nama</h3>
+            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+  <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          </div>
+
+        </div>
+
+  </div>
 </div>
