--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -48,35 +48,40 @@
 
     <div class="container">
         
-        <div class="container " style="text-align: left;">
-           
-            <div class="row">
-                <div class="col-sm border-left">
-  
-                <a href="#"><h3 style="color: #158CBA">News</h3></a>
-                <p class="lead">2017</p>
-                <h5>Two new window ventilators - profine expands its range -</h5>
-                
-                </div>
-                <div class="col-sm border-left">
-                   
-                    <a href="#"><h3 style="color: #158CBA">Events</h3></a>
-                    <p class="lead">2018</p>
-                    <h5>BAU München</h5>
-                    
-                </div>
-                <div class="col-sm border-left">
-                  
-                    <a href="#"><h3 style="color: #158CBA">Topics & Trends</h3></a>
-                    <p class="lead">
-                        SAFETY & SECURITY</p>
-                    <h5>Safe protection against forced entry with PVC-U windows</h5>
-                    
-                </div>
-              </div>
-            
-            </div>
+        <h2>O nama neki text</h2>
+        <p class="lead">
+            Trocal važi za pionira u prozorskoj branši. Pre više od 50 godina TROCAL je razvio i proizveo prvi u nizu PVC prozor. TROCAL danas ima različite sisteme prozora, vrata i kliznih sistema kao i varijanti zastora.
+        </p>
+        <div class="row">
+
+          <div class="col-sm">
+
+            <img style="height: 200px; width: 100%; display: block;" src="assets/prozori_ulaznavrata.jpg" alt="Card image">
+            <h3>Sistemi prozora i ulaznih vrata</h3>
+            <p class="lead">TROCAL PVC prozore i sisteme vrata nudimo sa različitom dubinom ugradnje i u raznim varijantama. Za svakog ponešto.</p>
+
           </div>
+
+          <div class="col-sm">
+            
+            <img style="height: 200px; width: 100%; display: block;" src="assets/klizni_sistemi.jpg" alt="Card image">
+            <h3>Klizni sistemi</h3>
+            <p class="lead">TROCAL PVC asortiman, raspolaže profilima sa različitom dubinom ugradnje i raznim varijantama kliznih i podizno-kliznih sistema. 
+                Ispunite svoje želje.</p>
+
+          </div>
+
+          <div class="col-sm">
+            
+              <img style="height: 200px; width: 100%; display: block;" src="assets/sistemi_zastora.jpg" alt="Card image">
+              <h3>Sistemi zastora</h3>
+              <p class="lead">Roletne i prozorski kapci, uveravaju svojom funkcionalnošću i odlikuju se individualnim prednostima. Uverite se sami i informišite se kod naše sestrinske robne marke KOMMERLING.</p>
+
+          </div>
+
+        </div>
+
+        
             <br>
       
            
@@ -104,11 +109,42 @@
                       </div>
                       
                     </div>
+
               </div>
                 
-
+              
             </div>
           
+            <div class="container " style="text-align: left;">
+              <hr>
+                <div class="row">
+                    <div class="col-sm ">
+      
+                    <a href="#"><h3 style="color: #158CBA">News</h3></a>
+                    <p class="lead">2017</p>
+                    <h5>Two new window ventilators - profine expands its range -</h5>
+                    
+                    </div>
+                    <div class="col-sm ">
+                       
+                        <a href="#"><h3 style="color: #158CBA">Events</h3></a>
+                        <p class="lead">2018</p>
+                        <h5>BAU München</h5>
+                        
+                    </div>
+                    <div class="col-sm ">
+                      
+                        <a href="#"><h3 style="color: #158CBA">Topics & Trends</h3></a>
+                        <p class="lead">
+                            SAFETY & SECURITY</p>
+                        <h5>Safe protection against forced entry with PVC-U windows</h5>
+                        
+                    </div>
+                  </div>
+                
+                </div>
+                <hr>
+              </div>
 
         <div class="container text-white" style="background-color: #158CBA; text-align: center;">
            
