--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
           <a class="nav-link" href="#">Jezik</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">O nama</a>
+          <a class="nav-link" routerLink = '/aboutus'>O nama</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Kontakt</a>
+          <a class="nav-link" routerLink = '/contact'>Kontakt</a>
         </li>
       </ul>
     </div>
@@ -18,7 +18,7 @@
   </nav>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="assets/logo2.png"></a>
+      <a class="navbar-brand" routerLink = '/home'><img src="assets/logo2.png"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,16 +26,16 @@
       <div class="collapse navbar-collapse" id="navbarColor03">
         <ul class="navbar-nav ml-auto" style="font-size: 18pt;">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" routerLink = '/home'>Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" routerLink = '/product'>Proizvodi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" routerLink = '/project'>Projekti</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" routerLink = '/aboutus'>O nama</a>
           </li>
         </ul>
       </div>
