--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,11 +23,7 @@
 
   <nav class="my-nav navbar navbar-expand-lg navbar-dark bg-primary">
      
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    
-      <div class="collapse navbar-collapse" id="navbarColor01" style="font-size: 13pt;">
+      
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -43,7 +39,7 @@
           </li>
         </ul>
   
-      </div>
+    
     </nav>
 
     <div class="container">
@@ -66,7 +62,7 @@
             
             <img style="height: 200px; width: 100%; display: block;" src="assets/klizni_sistemi.jpg" alt="Card image">
             <h3>Klizni sistemi</h3>
-            <p class="lead">TROCAL PVC asortiman, raspolaže profilima sa različitom dubinom ugradnje i raznim varijantama kliznih i podizno-kliznih sistema. 
+            <p class="lead">Aluninijumski PVC asortiman, raspolaže profilima sa različitom dubinom ugradnje i raznim varijantama kliznih i podizno-kliznih sistema. 
                 Ispunite svoje želje.</p>
 
           </div>
