--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <!-- navbar products-->
+  
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    
+    <p style="color: white;"><a style="color: white;" routerLink ="/home">Home</a> > Proizvodi</p>
   </nav>
 
   <h1>Products</h1>
@@ -15,19 +15,19 @@
 
     <div class="col-sm">
 
-      <img style="height: 200px; width: 100%; display: block;" src="assets/prozori_ulaznavrata.jpg" alt="Card image">
-      <h3>Sistemi prozora i ulaznih vrata</h3>
+      <img style="height: 250px; width: 100%; display: block;" src="assets/prozori_ulaznavrata.jpg" alt="Card image" id="s_p_img">
+      <h3><a routerLink = '/sistemi-prozora-ulaznih-vrata'>Sistemi prozora i ulaznih vrata</a></h3>
       <p class="lead">TROCAL PVC prozore i sisteme vrata nudimo sa različitom dubinom ugradnje i u raznim varijantama. Za svakog ponešto. Za svakog ponešto. Za svakog ponešto.</p>
 
-      <div class="list-group">
-        <a href="#" class="list-group-item list-group-item-action">
-            88 mm systems
+      <div class="list-group sistemi_prozora">
+        <a href="#" class="my-group-item list-group-item list-group-item-action" id="s_p_1">
+            > 88 mm systems
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
-            88 mm systems
+        <a href="#" class="my-group-item list-group-item list-group-item-action" id="s_p_2">
+            > 76 mm systems
         </a>
-        <a href="#" class="list-group-item list-group-item-action ">
-            88 mm systems
+        <a href="#" class="my-group-item list-group-item list-group-item-action " id="s_p_3">
+            > 70 mm systems
         </a>
       </div>
 
@@ -37,20 +37,20 @@
 
     <div class="col-sm">
       
-      <img style="height: 200px; width: 100%; display: block;" src="assets/klizni_sistemi.jpg" alt="Card image">
-      <h3>Klizni sistemi</h3>
+      <img style="height: 250px; width: 100%; display: block;" src="assets/klizni_sistemi.jpg" alt="Card image" id="k_s_img">
+      <h3><a routerLink = "/klizni">Klizni sistemi - Alumil</a></h3>
       <p class="lead">Aluninijumski PVC asortiman, raspolaže profilima sa različitom dubinom ugradnje i raznim varijantama kliznih i podizno-kliznih sistema. 
           Ispunite svoje želje.</p>
         
           <div class="list-group">
-              <a href="#" class="list-group-item list-group-item-action">
-                  88 mm systems
+              <a href="#" class="my-group-item list-group-item list-group-item-action" id="k_s_1">
+                  > Klizni
               </a>
-              <a href="#" class="list-group-item list-group-item-action">
-                  88 mm systems
+              <a href="#" class="my-group-item list-group-item list-group-item-action" id="k_s_2">
+                  > Podizno klizni
               </a>
-              <a href="#" class="list-group-item list-group-item-action ">
-                  88 mm systems
+              <a href="#" class="my-group-item list-group-item list-group-item-action" id="k_s_3">
+                  > Kombi sistemi
               </a>
             </div>
             <hr>
@@ -58,19 +58,16 @@
 
     <div class="col-sm">
       
-        <img style="height: 200px; width: 100%; display: block;" src="assets/sistemi_zastora.jpg" alt="Card image">
-        <h3>Sistemi zastora</h3>
+        <img style="height: 250px; width: 100%; display: block;" src="assets/sistemi_zastora.jpg" alt="Card image">
+        <h3><a routerLink = "/alu-profili-alumil">Alu profili - Alumil</a></h3>
         <p class="lead">Roletne i prozorski kapci, uveravaju svojom funkcionalnošću i odlikuju se individualnim prednostima. Uverite se sami i informišite se kod naše sestrinske robne marke KOMMERLING.</p>
 
         <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action">
-                88 mm systems
+            <a href="#" class="my-group-item list-group-item list-group-item-action">
+                > Serija 965
             </a>
-            <a href="#" class="list-group-item list-group-item-action">
-                88 mm systems
-            </a>
-            <a href="#" class="list-group-item list-group-item-action ">
-                88 mm systems
+            <a href="#" class="my-group-item list-group-item list-group-item-action">
+                > Serija 11000
             </a>
           </div>
           <hr>
@@ -81,19 +78,16 @@
     
     <div class="col-sm">
 
-      <img style="height: 200px; width: 100%; display: block;" src="assets/prozori_ulaznavrata.jpg" alt="Card image">
-      <h3>Sistemi prozora i ulaznih vrata</h3>
+      <img style="height: 250px; width: 100%; display: block;" src="assets/prozori_ulaznavrata.jpg" alt="Card image">
+      <h3><a routerLink = "/fasada-staklo">Fasade od stakla</a></h3>
       <p class="lead">TROCAL PVC prozore i sisteme vrata nudimo sa različitom dubinom ugradnje i u raznim varijantama. Za svakog ponešto. Za svakog ponešto. Za svakog ponešto.</p>
 
       <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action">
-              88 mm systems
+          <a href="#" class="my-group-item list-group-item list-group-item-action">
+              > Strukturalne
           </a>
-          <a href="#" class="list-group-item list-group-item-action">
-              88 mm systems
-          </a>
-          <a href="#" class="list-group-item list-group-item-action ">
-              88 mm systems
+          <a href="#" class="my-group-item list-group-item list-group-item-action">
+              > Ne strukturalne
           </a>
         </div>
         <hr>
@@ -101,43 +95,28 @@
 
     <div class="col-sm">
       
-      <img style="height: 200px; width: 100%; display: block;" src="assets/klizni_sistemi.jpg" alt="Card image">
-      <h3>Klizni sistemi</h3>
-      <p class="lead">Aluninijumski PVC asortiman, raspolaže profilima sa različitom dubinom ugradnje i raznim varijantama kliznih i podizno-kliznih sistema. 
-          Ispunite svoje želje.</p>
+        <img style="height: 250px; width: 100%; display: block;" src="assets/sistemi_zastora.jpg" alt="Card image">
+        <h3><a routerLink = "/alu-bond-fasade">Alu Bond fasade</a></h3>
+        <p class="lead">Roletne i prozorski kapci, uveravaju svojom funkcionalnošću i odlikuju se individualnim prednostima. Uverite se sami i informišite se kod naše sestrinske robne marke KOMMERLING.</p>
 
-          <div class="list-group">
-              <a href="#" class="list-group-item list-group-item-action">
-                  88 mm systems
-              </a>
-              <a href="#" class="list-group-item list-group-item-action">
-                  88 mm systems
-              </a>
-              <a href="#" class="list-group-item list-group-item-action ">
-                  88 mm systems
-              </a>
-            </div>
-            <hr>
+        <div class="list-group">
+            <a href="#" class="my-group-item list-group-item list-group-item-action">
+                > 88 mm systems
+            </a>
+            <a href="#" class="my-group-item list-group-item list-group-item-action">
+                > 88 mm systems
+            </a>
+            <a href="#" class="my-group-item list-group-item list-group-item-action ">
+                > 88 mm systems
+            </a>
+          </div>
+          <hr>
+
     </div>
 
     <div class="col-sm">
       
-        <img style="height: 200px; width: 100%; display: block;" src="assets/sistemi_zastora.jpg" alt="Card image">
-        <h3>Sistemi zastora</h3>
-        <p class="lead">Roletne i prozorski kapci, uveravaju svojom funkcionalnošću i odlikuju se individualnim prednostima. Uverite se sami i informišite se kod naše sestrinske robne marke KOMMERLING.</p>
-
-        <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action">
-                88 mm systems
-            </a>
-            <a href="#" class="list-group-item list-group-item-action">
-                88 mm systems
-            </a>
-            <a href="#" class="list-group-item list-group-item-action ">
-                88 mm systems
-            </a>
-          </div>
-          <hr>
+        
     </div>
 
   </div>
