--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,48 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style=" min-height:28px; height: 32px;">
   
-    <div class="collapse navbar-collapse" id="navbarColor011">
-      <div class="container">
-      <ul class="navbar-nav mr-auto">
+  <div class="collapse navbar-collapse" id="navbarColor011">
+    <div class="container">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Jezik</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink = '/aboutus'>O nama</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink = '/contact'>Kontakt</a>
+      </li>
+    </ul>
+  </div>
+  </div>
+</nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+    <a class="navbar-brand" routerLink = '/home'><img src="assets/logo2.png"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarColor03">
+      <ul class="navbar-nav ml-auto" style="font-size: 18pt;">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Jezik</a>
+          <a class="nav-link" routerLink = '/home'>Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item">
+          <a class="nav-link" routerLink = '/proizvodi'>Proizvodi</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink = '/project'>Projekti</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink = '/aboutus'>O nama</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" routerLink = '/contact'>Kontakt</a>
         </li>
       </ul>
     </div>
-    </div>
+  </div>
   </nav>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" routerLink = '/home'><img src="assets/logo2.png"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    
-      <div class="collapse navbar-collapse" id="navbarColor03">
-        <ul class="navbar-nav ml-auto" style="font-size: 18pt;">
-          <li class="nav-item active">
-            <a class="nav-link" routerLink = '/home'>Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink = '/product'>Proizvodi</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink = '/project'>Projekti</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink = '/aboutus'>O nama</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    </nav>
 
-    <router-outlet></router-outlet>
+<router-outlet></router-outlet>
 
 <div class="footer" style="background-color: #F5F5F5">
   <div class="container" style="text-align: center;">
