--- a/src/app/artikli/artikli.component.html
+++ b/src/app/artikli/artikli.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
 <h2 style="color: #999;">Sistemi prozora i ulaznih vrata</h2>
-<h1>88 mm sistemi</h1>
+<h1>{{ getGroupData[0].ime }}</h1>
 <p class="lead">{{ getGroupData[0].opis }}</p>
 <div class="row">
 
