--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,22 +23,19 @@
 
 <nav class="my-nav navbar navbar-expand-lg navbar-dark bg-primary">
    
-    
+   <div class="container"> 
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="my-nav-link nav-link" href="#">Prozori i vrata</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link " href="#">Features</a>
+          <a class="my-nav-link nav-link " href="#">Fasade</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">About</a>
+          <a class="my-nav-link nav-link" href="#">Klizni sistemi</a>
         </li>
       </ul>
-
+    </div>
   
   </nav>
 
@@ -79,37 +76,73 @@
 
       
           <br>
-    
-         
-          <div style="background-color: #F5F5F5;">
-
-            <div class="container">
-                <div class="row">
-
-                    <div class="col-8">
-                        <img src="assets/prozor_transparent.png">
-                    </div>
-
-                    <div class="col-4">
-                      
-                        <div class="jumbotron">
-                            <h1 class="display-3">Model</h1>
-                            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-                            <hr class="my-4">
-                            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-                            <p class="lead">
-                              <a class="btn btn-primary btn-lg" href="#" role="button">Detaljnije</a>
-                            </p>
-                          </div>
-
-                    </div>
-                    
-                  </div>
-
-            </div>
-              
             
-          </div>
+            <div class="row">
+
+              <div class="col-sm">
+                
+                <div class="card mb-3 border-primary">
+                  <h3 class="card-header border-primary">Sistemi prozora i ulaznih vrata</h3>
+                  <div class="card-body">
+                    <h5 class="card-title">88 mm sistemi</h5>
+                    <h6 class="card-subtitle text-muted">TROCAL Vam stavlja na raspolaganje sisteme prozora i ulaznih vrata u različitim varijantama sa dubinom ugradnje od 88mm</h6>
+                  </div>
+                  <img style="height: 300px; width: 100%; display: block;" src="assets/sistemi_prozora_ulaznih_vrata/88 mm systems.jpg" alt="Card image">
+                  <div class="card-body">
+                    <p class="card-text">TROCAL 88, inovativan PVC sistem prozora i vrata sa dubinom ugradnje od 88 mm.
+ 
+                        Pravolinijski dizajn profila u dve ravni, sa uskim vidnim površinama za najoptimalniji upliv dnevne svetlosti i visoke solarne energetske dobitke.</p>
+                    <hr>
+                  </div>
+                  <div class="card-body">
+                    <a class="btn btn-primary btn-lg" routerLink = "#">Detaljnije</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-sm">
+                
+                  <div class="card mb-3 border-primary">
+                      <h3 class="card-header border-primary">Klizni sistemi</h3>
+                      <div class="card-body">
+                        <h5 class="card-title">PremiSlide 76</h5>
+                        <h6 class="card-subtitle text-muted">PremiSlide 76 nudi potpuno nove mogućnosti kliznih prozora i vrata sa tehnički izuzetnim kapacitetom i opcijom ugradnje u fasadu.</h6>
+                      </div>
+                      <img style="height: 300px; width: 100%; display: block;" src="assets/sistemi_prozora_ulaznih_vrata/88 mm systems.jpg" alt="Card image">
+                      <div class="card-body">
+                        <p class="card-text">Naspram uobičajenih kliznih prozora, koji ni izdaleka ne zaptivaju kao standardni okretno-nagibni prozori, osnova PremSlide 76 sistema počiva na osnovama vodećeg sistema na tržištu Trocal 76. PremiSlide 76, ima veliki izbor dekor folija.</p>
+                        <hr>
+                      </div>
+                      <div class="card-body">
+                          <a class="btn btn-primary btn-lg" routerLink = "#">Detaljnije</a>
+                      </div>
+                    </div>
+
+              </div>
+
+              <div class="col-sm">
+               
+                  <div class="card mb-3 border-primary">
+                      <h3 class="card-header border-primary">Sistemi zastora</h3>
+                      <div class="card-body">
+                        <h5 class="card-title">VariNova – Inovativna kutija roletne</h5>
+                        <h6 class="card-subtitle text-muted">U zavisnosti od načina ugradnje, servis kutije VariNova može se izvesti pristupom sa unutrašnje strane ili odozdo.</h6>
+                      </div>
+                      <img style="height: 300px; width: 100%; display: block;" src="assets/sistemi_prozora_ulaznih_vrata/88 mm systems.jpg" alt="Card image">
+                      <div class="card-body">
+                        <p class="card-text">Isplativost kutije roletne ogleda se u toplotno-tehničkim prednostima, u umanjenim računima utroška energije kako kod novoizgrađenih objekata tako i kod starogradnje. Isplativost kutije roletne ogleda se u toplotno-tehničkim prednostima.</p>
+                        <hr>
+                      </div>
+                      <div class="card-body">
+                          <a class="btn btn-primary btn-lg" routerLink = "#">Detaljnije</a>
+                      </div>
+                    </div>
+
+              </div>
+              
+            </div>
+            
+       
         
           <div class="container " style="text-align: left;">
             <hr>
