--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
         <a class="nav-link" href="#">Jezik</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink = '/aboutus'>O nama</a>
+        <a class="nav-link" routerLink = '/o-nama'>O nama</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink = '/contact'>Kontakt</a>
+        <a class="nav-link" routerLink = '/kontakt'>Kontakt</a>
       </li>
     </ul>
   </div>
@@ -32,10 +32,10 @@
           <a class="nav-link" routerLink = '/proizvodi'>Proizvodi</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink = '/project'>Projekti</a>
+          <a class="nav-link" routerLink = '/projekti'>Projekti</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink = '/aboutus'>O nama</a>
+          <a class="nav-link" routerLink = '/o-nama'>O nama</a>
         </li>
       </ul>
     </div>
