--- a/src/app/proizvodi/proizvodi.component.html
+++ b/src/app/proizvodi/proizvodi.component.html
@@ -52,7 +52,20 @@
               <a href="#" class="my-group-item list-group-item list-group-item-action" id="k_s_3">
                   > Kombi sistemi
               </a>
-            </div>
+              <a href="#" class="my-group-item list-group-item list-group-item-action" id="k_s_3">
+                  > s350
+              </a>
+              <a href="#" class="my-group-item list-group-item list-group-item-action" id="k_s_3">
+                  > s440
+              </a>
+              <a href="#" class="my-group-item list-group-item list-group-item-action" id="k_s_3">
+                  > s560
+              </a>
+              <a href="#" class="my-group-item list-group-item list-group-item-action" id="k_s_3">
+                  > s700
+              </a>
+        </div>
+
             <hr>
     </div>
 
@@ -64,10 +77,13 @@
 
         <div class="list-group">
             <a href="#" class="my-group-item list-group-item list-group-item-action">
-                > Serija 965
+                > Serija M9650
             </a>
             <a href="#" class="my-group-item list-group-item list-group-item-action">
-                > Serija 11000
+                > Serija M9660
+            </a>
+            <a href="#" class="my-group-item list-group-item list-group-item-action">
+                > Serija M11000
             </a>
           </div>
           <hr>
@@ -98,19 +114,8 @@
         <img style="height: 250px; width: 100%; display: block;" src="assets/sistemi_zastora.jpg" alt="Card image">
         <h3><a routerLink = "/alu-bond-fasade">Alu Bond fasade</a></h3>
         <p class="lead">Roletne i prozorski kapci, uveravaju svojom funkcionalnošću i odlikuju se individualnim prednostima. Uverite se sami i informišite se kod naše sestrinske robne marke KOMMERLING.</p>
-
-        <div class="list-group">
-            <a href="#" class="my-group-item list-group-item list-group-item-action">
-                > 88 mm systems
-            </a>
-            <a href="#" class="my-group-item list-group-item list-group-item-action">
-                > 88 mm systems
-            </a>
-            <a href="#" class="my-group-item list-group-item list-group-item-action ">
-                > 88 mm systems
-            </a>
-          </div>
-          <hr>
+      
+        <hr>
 
     </div>
 
