--- a/src/app/proizvodi/proizvodi.component.html
+++ b/src/app/proizvodi/proizvodi.component.html
@@ -16,8 +16,8 @@
     <div class="col-sm">
 
       <img style="height: 250px; width: 100%; display: block;" src="assets/prozori_ulaznavrata.jpg" alt="Card image" id="s_p_img">
-      <h3><a routerLink = './sistemi-prozora-ulaznih-vrata'>Sistemi prozora i ulaznih vrata</a></h3>
-      <p class="lead">TROCAL PVC prozore i sisteme vrata nudimo sa različitom dubinom ugradnje i u raznim varijantama. Za svakog ponešto. Za svakog ponešto. Za svakog ponešto.</p>
+      <h3><a routerLink = './sistemi-prozora-ulaznih-vrata'>PVC sistemi prozora i ulaznih vrata</a></h3>
+      <p class="lead">PVC prozore i sisteme vrata nudimo sa različitom dubinom ugradnje i u raznim varijantama. Za svakog ponešto. Za svakog ponešto. Za svakog ponešto.</p>
 
       <div class="list-group sistemi_prozora">
         <a routerLink = "./88mmsystems" class="my-group-item list-group-item list-group-item-action" id="s_p_1">
@@ -38,7 +38,7 @@
     <div class="col-sm">
       
       <img style="height: 250px; width: 100%; display: block;" src="assets/klizni_sistemi.jpg" alt="Card image" id="k_s_img">
-      <h3><a routerLink = "./klizni-sistemi">Klizni sistemi - Alumil</a></h3>
+      <h3><a routerLink = "./klizni-sistemi">Klizni sistemi - PVC</a></h3>
       <p class="lead">Aluninijumski PVC asortiman, raspolaže profilima sa različitom dubinom ugradnje i raznim varijantama kliznih i podizno-kliznih sistema. 
           Ispunite svoje želje.</p>
         
@@ -52,18 +52,6 @@
               <a href="#" class="my-group-item list-group-item list-group-item-action" id="k_s_3">
                   > Kombi sistemi
               </a>
-              <a href="#" class="my-group-item list-group-item list-group-item-action" id="k_s_3">
-                  > s350
-              </a>
-              <a href="#" class="my-group-item list-group-item list-group-item-action" id="k_s_3">
-                  > s440
-              </a>
-              <a href="#" class="my-group-item list-group-item list-group-item-action" id="k_s_3">
-                  > s560
-              </a>
-              <a href="#" class="my-group-item list-group-item list-group-item-action" id="k_s_3">
-                  > s700
-              </a>
         </div>
 
             <hr>
@@ -76,13 +64,13 @@
         <p class="lead">Roletne i prozorski kapci, uveravaju svojom funkcionalnošću i odlikuju se individualnim prednostima. Uverite se sami i informišite se kod naše sestrinske robne marke KOMMERLING.</p>
 
         <div class="list-group">
-            <a href="#" class="my-group-item list-group-item list-group-item-action">
+            <a routerLink = "./M9650" class="my-group-item list-group-item list-group-item-action">
                 > Serija M9650
             </a>
-            <a href="#" class="my-group-item list-group-item list-group-item-action">
+            <a routerLink = "./M9660" class="my-group-item list-group-item list-group-item-action">
                 > Serija M9660
             </a>
-            <a href="#" class="my-group-item list-group-item list-group-item-action">
+            <a routerLink = "./M11000" class="my-group-item list-group-item list-group-item-action">
                 > Serija M11000
             </a>
           </div>
@@ -99,10 +87,10 @@
       <p class="lead">TROCAL PVC prozore i sisteme vrata nudimo sa različitom dubinom ugradnje i u raznim varijantama. Za svakog ponešto. Za svakog ponešto. Za svakog ponešto.</p>
 
       <div class="list-group">
-          <a href="#" class="my-group-item list-group-item list-group-item-action">
+          <a routerLink = "./Strukturalne" class="my-group-item list-group-item list-group-item-action">
               > Strukturalne
           </a>
-          <a href="#" class="my-group-item list-group-item list-group-item-action">
+          <a routerLink = "./Polu-strukturalne" class="my-group-item list-group-item list-group-item-action">
               > Ne strukturalne
           </a>
         </div>
@@ -112,7 +100,7 @@
     <div class="col-sm">
       
         <img style="height: 250px; width: 100%; display: block;" src="assets/sistemi_zastora.jpg" alt="Card image">
-        <h3><a routerLink = "/alu-bond-fasade">Alu Bond fasade</a></h3>
+        <h3><a routerLink = "/alu-bond-fasade">Alubond fasade</a></h3>
         <p class="lead">Roletne i prozorski kapci, uveravaju svojom funkcionalnošću i odlikuju se individualnim prednostima. Uverite se sami i informišite se kod naše sestrinske robne marke KOMMERLING.</p>
       
         <hr>
@@ -120,7 +108,24 @@
     </div>
 
     <div class="col-sm">
-      
+        <img style="height: 250px; width: 100%; display: block;" src="assets/klizni_sistemi.jpg" alt="Card image" id="k_s_img">
+        <h3><a routerLink = "./klizni-sistemi">Klizni sistemi - Aluminijum</a></h3>
+        <p class="lead">Aluninijumski PVC asortiman, raspolaže profilima sa različitom dubinom ugradnje i raznim varijantama kliznih i podizno-kliznih sistema. 
+            Ispunite svoje želje.</p>
+          
+            <div class="list-group">
+                <a routerLink = "./s350" class="my-group-item list-group-item list-group-item-action" id="k_s_3">
+                    > s350
+                </a>
+                <a routerLink = "./s440" class="my-group-item list-group-item list-group-item-action" id="k_s_3">
+                    > s440
+                </a>
+                <a routerLink = "./s560" class="my-group-item list-group-item list-group-item-action" id="k_s_3">
+                    > s560
+                </a>
+                <a routerLink = "./s700" class="my-group-item list-group-item list-group-item-action" id="k_s_3">
+                    > s700
+                </a>
         
     </div>
 
