--- a/src/app/kontakt/kontakt.component.html
+++ b/src/app/kontakt/kontakt.component.html
@@ -1,25 +1,20 @@
 <div class="container">
 <h1>Kontakt</h1>
-<p>
-    Ovde možete pronaći sve kontakte zaposlenih, a ujedno možete nam poslati vaše pitanje i mi ćemo vam odgovoriti u najkraćem roku.
-</p>
 
 <h2>Lokacija</h2>
 
 <div class="row-fluid">
     <div class="span8">
-      <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.uk/maps?f=q&source=s_q&hl=en&geocode=&q=15+Springfield+Way,+Hythe,+CT21+5SH&aq=t&sll=52.8382,-2.327815&sspn=8.047465,13.666992&ie=UTF8&hq=&hnear=15+Springfield+Way,+Hythe+CT21+5SH,+United+Kingdom&t=m&z=14&ll=51.077429,1.121722&output=embed"></iframe>
+      <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m24!1m12!1m3!1d1498.6885925235717!2d20.50109767769479!3d43.12452931073066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m9!3e6!4m3!3m2!1d43.1247239!2d20.5012874!4m3!3m2!1d43.1247239!2d20.5012919!5e0!3m2!1sen!2srs!4v1546108003234"></iframe>
   </div>
   
     <div class="span4">
     <h2>Adresa</h2>
     <address>
-      <strong>Hythe Window Cleaning</strong><br>
-      15 Springfield Way<br>
-      Hythe<br>
-      Kent<br>
-      United Kingdon<br>
-      CT21 5SH<br>
+      <strong>Novi Pazar 36300</strong><br>
+      Kej skopskih žrtava bb<br>
+      Importane doo<br>
+
     </address>
   </div>
 </div>
@@ -30,9 +25,8 @@
       <hr>
       <h2><img src="assets/phone.png"> Telefoni</h2>  
      <ul>
-       <li>+381 123 123 123</li>
-       <li>+381 123 123 123</li>
-       <li>+381 123 123 123</li>
+       <li>+381 64 0321570</li>
+       <li>+381 20 384348</li>
      </ul>
     </div>
 
