--- a/src/app/onama/onama.component.html
+++ b/src/app/onama/onama.component.html
@@ -1,45 +1,21 @@
-<div class="container">
+<div class="container" style="text-align: center;">
 <h1>IMPORTANE</h1>
-  <div class="row">
-
-    <div class="col">
-      <img src="assets/onama.jpg">
-    </div>
-
-    <div class="col">
-      <p>
-        Importane važi za pionira u prozorskoj branši. Pre više od 50 godina TROCAL je razvio i proizveo prvi u nizu PVC prozora. 
-        Od tada TROCAL je vodeći u inovacijama i prednjači u prozorskoj tehnologiji.
-      </p>
-      <br>
-      <p>
-        Nov, elegantan dizajn i nove tehnologije su obeležja kojima TROCAL uvek iznova pomera granice. 
-        Velika prednost su iskustvo i tehnologija TROCAL-a, koje se ogledaju u svim generacijama, nezavisno od toga da li su to prozorski sistemi, sistemi vrata ili klizni sistemi.
-        Pored izvanrednih tehničkih vrednosti, optimizovanih toplotnih i zvučnih svojstava, odlikuje ga vanvremenski elegantan dizajn. 
-        TROCAL PVC prozori ispunjavaju sadašnje i buduće upite zahtevne arhitekture.
-      </p>
-      <br>
-      <p>
-        Team TROCAL se sastoji od zajednice ljudi, saradnika, čiji je najviši cilj, da svojim aktivnostima pruže korist partnerima i krajnjim klijentima. 
-        U ostvaren Corporate Identity uključili smo i naše partnere koji su u ovoj zajednici “Member of Team TROCAL”.
-TROCAL se odlikuje:
-      </p>
-    </div>
-
-  </div>
-  <ul>
-    <li>
-      TROCAL je jedinstven – osmišljavamo novine i pružamo nesvakidašnje.
-    </li>
-    <li>
-      TROCAL je fleksibilan – jer smo brzi, usmereni na cilj i na klijente.
-    </li>
-    <li>
-      TROCAL je otvoren – negujemo otvoren, fer pristup prema saradnicima, kupcima i javnosti.
-    </li>
-    <li>
-      TROCAL je inovativan – jer je razvoj budućih proizvoda i servis za pojedina tržišta oduvek naša tradicija.
-    </li>
-  </ul>
-
+<hr>
+<p>
+  Importane doo je preduzece koje se bavi proizvodnjom stolarije od aluminijumskih i pvc profila.
+  <br>
+  U sklopu toga proizvode se jos i strukturalne, polu-strukuralne i alubond fasade od stakla.
+  <br>
+  Po dogovoru klijenata vrsimo transport i montazu na teritoriji Srbije i inostranstva.
+</p>
 </div>
+
+<div class="container">
+  <div class="span4">
+    <address>
+      <strong> Importane doo</strong>
+     <br>
+      Radno vreme:<br>
+      08:00h - 16:00h Radnim danima
+    </address>
+  </div>
