--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,10 @@
   <div class="collapse navbar-collapse" id="navbarColor066">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Jezik<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">Language<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">O nama</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Kontakt</a>
+        <a class="nav-link" routerLink = '/kontakt'>Kontakt</a>
       </li>
     </ul>
   </div>
@@ -75,8 +72,17 @@
             <br>
             <h3>IMPORTANE doo</h3>
             <p class="mb-0">
-              Importane doo je preduzece koje se bavi proizvodnjom stolarije od aluminijumskih i pvc profila. 
+              Radno vreme:
+              <br>
+              08:00h do 16:00h od ponedeljka do petka
+              <br>
             </p>
+              <ul>
+                <li>office@importane.rs</li>
+                <li>Telefon: +381 64 0321570</li>
+                <li>Novi Pazar 36300, Kej skopskih žrtava bb</li>
+              </ul>
+            
   <footer class="blockquote-footer">Website by<cite title="Source Title">compay name</cite></footer>
           </div>
 
