--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,10 +29,7 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="my-nav-link nav-link" routerLink = '/projekti'>Projekti</a>
-        </li>
-        <li class="nav-item active">
-          <a class="my-nav-link nav-link" routerLink = '/projekti'>Portfolio</a>
-        </li>       
+        </li>     
       </ul>
     </div>
   
@@ -42,7 +39,8 @@
       
       <h2>IMPORTANE doo</h2>
       <p class="lead">
-          Trocal važi za pionira u prozorskoj branši. Pre više od 50 godina TROCAL je razvio i proizveo prvi u nizu PVC prozor. TROCAL danas ima različite sisteme prozora, vrata i kliznih sistema kao i varijanti zastora.
+        Importane doo je preduzeće koje se bavi proizvodnjom stolarije od aluminijumskih i pvc profila.
+        U sklopu toga proizvode se još i strukturalne, polu-strukuralne i alubond fasade od stakla.
       </p>
       <div class="row">
 
