--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarColor066">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Language<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="http://importane.rs/en">Language: Engleski<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" routerLink = '/kontakt'>Kontakt</a>
@@ -77,7 +77,7 @@
             <p class="mb-0">
               Radno vreme:
               <br>
-              08:00h do 16:00h od ponedeljka do petka
+              08:00h do 17:00h od ponedeljka do petka
               <br>
             </p>
               <ul>
