--- a/src/app/onama/onama.component.html
+++ b/src/app/onama/onama.component.html
@@ -21,7 +21,7 @@
               Ono po cemu smo postali prepoznatljiviji su izrada i montaža strukturalnih odnosno polustrukturalnih fasada od
               stakla, kao i Alubond fasada od aluminijumskih panela.
               <br>
-              Nače proizvode i usluge plasiramo prvenstveno na domaćem tržistu, a plasiramo i na tržistu evropske unije sa 40%
+              Naše proizvode i usluge plasiramo prvenstveno na domaćem tržistu, a plasiramo i na tržistu evropske unije sa 40%
               naše ukupne proizvodnje.
             </h5>
             
@@ -45,6 +45,6 @@
       <strong> Importane doo</strong>
      <br>
       Radno vreme:<br>
-      08:00h - 16:00h Radnim danima
+      08:00h - 17:00h Radnim danima
     </address>
   </div>
